--- a/Basic/FullStack/First.html
+++ b/Basic/FullStack/First.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transaction</title>
-    <script src="./Second.js"></script>
+    <script src="Third.js"></script>
 </head>
 <body>
     
@@ -12,6 +12,8 @@
     <button onclick="Greet()" style="color: pink;"> Click me!</button>
     <input id="1" type="text">
      <button onclick="AddData()" style="color: pink;">AddData</button>
+     <button onclick="WindowDemo()">Take</button>
+     <button onclick="checkDevice()">Check</button>
 
 </body>
 </html>
